change climatology and introduce control flags

--- a/config/config_macos.tmpl
+++ b/config/config_macos.tmpl
@@ -52,7 +52,7 @@ export map_projection
 
 
 #creating folders
-mkdir -p $ZDIR $FIGDIR $FILESDIR
+mkdir -p $FIGDIR $FILESDIR
 
 #safety check
 echo "Check if CDO has been loaded"
